--- a/work1/demo/index.html
+++ b/work1/demo/index.html
@@ -6,11 +6,13 @@
 </head>
 
 <body>
-    <h1 align="center">XXIII Московский Международный фестиваль Рекламы</h1>
-    <p align="center">
-        пройдет с 18 по 20 ноября 2015 года<br>
-        в Центре Международной Торговли на Красной Пресне
-    </p>
+    <div align="center">
+        <h1>XXIII Московский Международный фестиваль Рекламы</h1>
+        <p>
+            пройдет с 18 по 20 ноября 2015 года<br>
+            в Центре Международной Торговли на Красной Пресне
+        </p>
+    </div>
     <h4>Организаторы фестиваля</h4>
     <blockquote>
         Российская Ассоциация Рекламных Агенств<br>
