--- a/expert/labs/index.html
+++ b/expert/labs/index.html
@@ -1,6 +1,14 @@
-﻿Центр Компьютерного обучения Специалист
-
-"Специалист" - лучший в России компьютерный учебный центр
+﻿<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Центр Компьютерного обучения Специалист
+    </title>
+</head>
+<body>
+    <h1>"Специалист" - лучший в России компьютерный учебный центр</h1>
 
 Новости Центра (файл news.html)
 Новости сертифицированного обучения (файл certificat.html)
@@ -23,3 +31,5 @@ PHP | JavaScript | Другие
 
 (c) 1991-2015 Центр компьютерного обучения "Специалист"tm при МГТУ им. Н.Э.Баумана
 Адрес главного офиса: г. Москва, Госпитальный переулок, д. 4/6, корпус МГТУ им. Баумана "Стилобат", 2-й этаж.
+</body>
+</html>
