Перенёс index.html

--- a/ib/demo/index.html
+++ b/ib/demo/index.html
@@ -3,6 +3,21 @@
     <title>
         Московский Международный фестиваль Рекламы
     </title>
+    <link rel="stylesheet" href="style.css">
+    <style>
+        /*
+        p{
+            color:blue;
+            background: silver;
+        }
+        h1{
+            color:maroon;
+        }
+        h4{
+            background: yellow;
+        }
+        */
+    </style>
 </head>
 
 <body>
@@ -30,7 +45,7 @@
         Проведение конкурсов телевизионной, печатной рекламы в Интернет, радиорекламы, полиграфического воплощения, конкурса молодых креаторов. Осуществление научной программы Фестиваля(семинары, круглые столы, расширенные заседания Общественного Совета, конференции).<br>
         На Фестивале будет открыт "Рекламный клуб" для общения, профессиональных встреч, презентаций.
     </p>
-<pre>
+<pre style="color: red;">
 Число участников:
 ==================
 1997:	  25
