--- a/ib/labs/index.html
+++ b/ib/labs/index.html
@@ -13,12 +13,13 @@
 
     <nav>
         <blockquote>
-            Новости Центра (файл news.html)<br>
-            Новости сертифицированного обучения (файл certificat.html)<br>
-            События (файл events.html)<br>
-            Новости сервера Online тестирования и сертификации (файл test.html)<br>
-            Новости дистанционного обучения (файл distance.html)<br>
-            Где находится офис? (нижняя часть документа)<br>
+            Ссылки относительно документа, а не относительно корня сайта.<br>
+            <a href="content/news.html">Новости Центра (файл news.html)</a><br>
+            <a href="content/certificat.html">Новости сертифицированного обучения (файл certificat.html)</a><br>
+            <a href="content/events.html">События (файл events.html)</a><br>
+            <a href="content/test.html">Новости сервера Online тестирования и сертификации (файл test.html)</a><br>
+            <a href="content/distance.html">Новости дистанционного обучения (файл distance.html)</a><br>
+            <a href="#addres">Где находится офис? (нижняя часть документа)</a><br>
         </blockquote>
     </nav>
     
@@ -36,7 +37,7 @@
 
     <aside>
         <p align="right">
-            Отзывы о сайте направляйте веб-мастеру: webmaster@specialist.ru
+            Отзывы о сайте направляйте веб-мастеру: <a href="mailto:">webmaster@specialist.ru</a>
         </p>
         <h4 align="center">Ближайшие курсы</h4>
         <p align="center">
@@ -47,7 +48,7 @@
     <hr width="90%">
 
     <footer>
-        <blockquote>
+        <blockquote id="addres">
             &copy; 1991-2015 Центр компьютерного обучения "Специалист"tm при МГТУ им. Н.Э.Баумана<br>
             Адрес главного офиса: г. Москва, Госпитальный переулок, д. 4/6, корпус МГТУ им. Баумана &laquo;<em>Стилобат</em>&raquo;, 2-й этаж.
         </blockquote>
