--- a/ip/src/index.html
+++ b/ip/src/index.html
@@ -16,18 +16,18 @@
     <h2>I</h2>
     <p> Once when I was six years old I saw a magnificent picture in a book, called <i>True Stories from Nature</i>, about the primeval forest. It was a picture of a boa constrictor in the act of swallowing an animal. Here is a copy of the drawing.</p>
     <div>
-        <img src="src/img/hroznys.jpg" alt="hroznys">
+        <img src="img/hroznys.jpg" alt="hroznys">
     </div>
     <p>In the book it said: <em>&ldquo;Boa constrictors swallow their prey whole, without chewing it. After that they are not able to move, and they sleep through the six months that they need for digestion.&rdquo;</em></p>
     <p>I pondered deeply, then, over the adventures of the jungle. And after some work with a colored pencil I succeeded in making my first drawing. My Drawing Number One. It looked something like this:</p>
     <div>
-        <img src="src/img/klobouk.jpg" alt="klobouk">
+        <img src="img/klobouk.jpg" alt="klobouk">
     </div>
     <p>I showed my masterpiece to the grown-ups, and asked them whether the drawing frightened them</p>
     <p>But they answered: <em>&ldquo;Frighten? Why should any one be frightened by a hat?&rdquo;</em></p>
     <p> My drawing was not a picture of a hat. It was a picture of a boa constrictor digesting an elephant. But since the grown-ups were not able to understand it, I made another drawing: I drew the inside of a boa constrictor, so that the grown-ups could see it clearly. They always need to have things explained. My Drawing Number Two looked like this:</p>
     <div>
-        <img src="src/img/slon.jpg" alt="slon">
+        <img src="img/slon.jpg" alt="slon">
     </div>
     <p>The grown-ups' response, this time, was to advise me to lay aside my drawings of boa constrictors, whether from the inside or the outside, and devote myself instead to geography, history, arithmetic, and grammar. That is why, at the age of six, I gave up what might have been a magnificent career as a painter. I had been disheartened by the failure of my Drawing Number One and my Drawing Number Two. Grown-ups never understand anything by themselves, and it is tiresome for children to be always and forever explaining things to them.</p>
     <p>So then I chose another profession, and learned to pilot airplanes. I have flown a little over all parts of the world; and it is true that geography has been very useful to me. At a glance I can distinguish China from Arizona. If one gets lost in the night, such knowledge is valuable.</p>
@@ -45,7 +45,7 @@
     <p><em>&ldquo;Draw me a sheep!&rdquo;</em></p>
     <p>I jumped to my feet, completely thunderstruck. I blinked my eyes hard. I looked carefully all around me. And I saw a most extraordinary small person, who stood there examining me with great seriousness. Here you may see the best portrait that, later, I was able to make of him. But my drawing is certainly very much less charming than its model.</p>
     <div>
-        <img src="src/img/malyPrinc.jpg" alt="malyPrinc">
+        <img src="img/malyPrinc.jpg" alt="malyPrinc">
     </div>
     <p>That, however, is not my fault. The grown-ups discouraged me in my painter's career when I was six years old, and I never learned to draw anything, except boas from the outside and boas from the inside.</p>
     <p>Now I stared at this sudden apparition with my eyes fairly starting out of my head in astonishment. Remember, I had crashed in the desert a thousand miles from any inhabited region. And yet my little man seemed neither to be straying uncertainly among the sands, nor to be fainting from fatigue or hunger or thirst or fear. Nothing about him gave any suggestion of a child lost in the middle of the desert, a thousand miles from any human habitation. When at last I was able to speak, I said to him:</p>
@@ -58,13 +58,13 @@
     <p><em>&ldquo;No, no, no! I do not want an elephant inside a boa constrictor. A boa constrictor is a very dangerous creature, and an elephant is very cumbersome. Where I live, everything is very small. What I need is a sheep. Draw me a sheep.&rdquo;</em></p>
     <p>So then I made a drawing.</p>
     <div>
-        <img src="src/img/nemocnyBeranek.jpg" alt="nemocnyBeranek">
+        <img src="img/nemocnyBeranek.jpg" alt="nemocnyBeranek">
     </div>
     <p>He looked at it carefully, then he said:</p>
     <p><em>&ldquo;No. This sheep is already very sickly. Make me another.&rdquo;</em></p>
     <p>So I made another drawing.</p>
     <div>
-        <img src="src/img/Beran.jpg" alt="Beran">
+        <img src="img/Beran.jpg" alt="Beran">
     </div>
     <p>My friend smiled gently and indulgently.</p>
     <p><em>&ldquo;You see yourself," he said, "that this is not a sheep. This is a ram. It has horns.&rdquo;</em></p>
@@ -72,11 +72,11 @@
     <p>But it was rejected too, just like the others.</p>
     <p><em>&ldquo;This one is too old. I want a sheep that will live a long time.&rdquo;</em></p>
     <div>
-        <img src="src/img/staryBeranek.jpg" alt="staryBeranek">
+        <img src="img/staryBeranek.jpg" alt="staryBeranek">
     </div>
     <p>By this time my patience was exhausted, because I was in a hurry to start taking my engine apart. So I tossed off this drawing.</p>
     <div>
-        <img src="src/img/krabice.jpg" alt="krabice">
+        <img src="img/krabice.jpg" alt="krabice">
     </div>
     <p>And I threw out an explanation with it.</p>
     <p><em>&ldquo;This is only his box. The sheep you asked for is inside.&rdquo;</em></p>
