--- a/ib/demo/module-3/article-1.html
+++ b/ib/demo/module-3/article-1.html
@@ -6,9 +6,7 @@
 	<body>
 		<header>
 			<h1>Статья номер 1</h1>
-			<blockquote>
-				<a href="links-2.html">Вернуться назад</a>
-			</blockquote>
+			<blockquote><a href="links-2.html">Вернуться назад</a></blockquote>
 		</header>
 		<article>
 			<p>
