--- a/ib/demo/module-3/links-2.html
+++ b/ib/demo/module-3/links-2.html
@@ -2,7 +2,6 @@
 <html>
 	<head>
 		<title>Демонстрация: внешние ссылки</title>
-		<base target="_blank">
 	</head>
 	<body>
 		<header>
@@ -13,7 +12,7 @@
 			<br>
 			<a href="folder/article-2.html">Статья номер 2</a>
 			<br>
-			<a href="http://ya.ru" target="_self">Yandex</a>
+			<a href="http://ya.ru">yandex</a>
 		</nav>
 		<section>
 			<p>
