--- a/ib/labs/index.html
+++ b/ib/labs/index.html
@@ -37,7 +37,8 @@
 
     <aside>
         <p align="right">
-            Отзывы о сайте направляйте веб-мастеру: <a href="mailto:">webmaster@specialist.ru</a>
+            Отзывы о сайте направляйте веб-мастеру:
+            <a href="mailto:">webmaster@specialist.ru</a>
         </p>
         <h4 align="center">Ближайшие курсы</h4>
         <p align="center">
