--- a/mozilla/index.html
+++ b/mozilla/index.html
@@ -4,9 +4,31 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="styles/style.css" type="text/css">
+  <title>Основы HTML</title>
 </head>
 <body>
-  <img src="/images/firefox.jpeg" alt="Изображение firefox mozilla">
+  <h1>Основы HTML</h1>
+  <p>
+    HTML (Hypertext Markup Language) - это код, который используется для структурирования и отображения веб-страницы и её контента. Например, контент может быть структурирован внутри множества параграфов, маркированных списков или с использованием изображений и таблиц данных. Как видно из названия, эта статья даст вам базовое понимание HTML и его функций.
+  </p>
+
+  <h2>Что такое HTML на самом деле?</h2>
+  <p>
+    HTML не является языком программирования; это язык разметки, и используется, чтобы сообщать вашему браузеру, как отображать веб-страницы, которые вы посещаете. Он может быть сложным или простым, в зависимости от того, как хочет веб-дизайнер. HTML состоит из ряда элементов, которые вы используете, чтобы вкладывать или оборачивать различные части контента, чтобы заставить контент отображаться или действовать определённым образом. Ограждающие теги могут сделать слово или изображение ссылкой на что-то ещё, могут сделать слова курсивом, сделать шрифт больше или меньше и так далее. Например, возьмём следующую строку контента:
+  </p>
+  <pre>
+    Моя кошка очень раздражена
+  </pre>
+  <p>
+    Если бы мы хотели, чтобы строка стояла сама по себе, мы могли бы указать, что это абзац, заключая его в теги абзаца:
+  </p>
+  <pre>
+    &lt;p&gt;Моя кошка очень раздражена&lt;/p&gt;
+  </pre>
+  <ul>
+    <li><h3><a href="The-Anatomy-of-HTML.html">Анатомия html элемента</a></h3></li>
+    <li><h3><a href="The-anatomy-of-a-CSS-Ruleset.html">Анатомия набора правил CSS</a></h3></li>
+  </ul>
 </body>
 </html>
