--- a/mozilla/src/index.html
+++ b/mozilla/src/index.html
@@ -27,8 +27,9 @@
     &lt;p&gt;Моя кошка очень раздражена&lt;/p&gt;
   </pre>
   <ul>
-    <li><h3><a href="The-Anatomy-of-HTML.html">Анатомия html элемента</a></h3></li>
-    <li><h3><a href="The-anatomy-of-a-CSS-Ruleset.html">Анатомия набора правил CSS</a></h3></li>
+    <li><h3><a href="the-anatomy-of-html.html">Анатомия html элемента</a></h3></li>
+    <li><h3><a href="the-anatomy-of-a-css-ruleset.html">Анатомия набора правил CSS</a></h3></li>
+    <li><h3><a href="working-with-files.html">Работа с файлами</a></h3></li>
   </ul>
 </body>
 </html>
