--- a/dt/01-html-basics/03-main-tags-html/main-tags-html.html
+++ b/dt/01-html-basics/03-main-tags-html/main-tags-html.html
@@ -21,6 +21,7 @@
       <ol>
         <a href="#element"><li>Element</li></a>
         <a href="#attribute"><li>Attribute</li></a>
+        <a href="#remark"><li>Remark</li></a>
       </ol>
 
       <h2 id="element">Element</h2>
@@ -60,5 +61,9 @@
           Значение атрибута, заключённое с двух сторон в кавычки.
         </li>
       </ol>
+      <h2 id="remark">Замечание</h2>
+      <p>
+        Обратите внимание на то, что теги &lt;b&gt; и &lt;i&gt; следует использовать внутри какого-либо другого тега, например абзаца. В этом случае абзацы создают общую структуру страницы (абзацы и заголовки), а указанные теги делают жирным или курсивом отдельные кусочки текста.
+      </p>
   </body>
 </html>
