--- a/dt/01-html-basics/02-basic-html-page-structure/basic-html-page-structure.html
+++ b/dt/01-html-basics/02-basic-html-page-structure/basic-html-page-structure.html
@@ -2,9 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>
-      Заголовок
-    </title>
+    <title>Основная структура страницы HTML</title>
   </head>
   <body>
     <h1>
