--- a/mozilla/src/the-anatomy-of-a-css-ruleset.html
+++ b/mozilla/src/the-anatomy-of-a-css-ruleset.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The anatomy of a CSS Ruleset</title>
+  <link rel="stylesheet" href="styles/style.css" type="text/css">
 </head>
 <body>
   <h3 id="anatomy-rule"><a href="#anatomy-rule">Анатомия набора правил CSS</a></h3>
