--- a/mozilla/src/working-with-files.html
+++ b/mozilla/src/working-with-files.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Работа с файлами</title>
+  <link rel="stylesheet" href="styles/style.css" type="text/css">
 </head>
 <body>
   <h1 id="working-with-files"><a href="#working-with-files">Работа с файлами</a></h1>
