html task and lab

--- a/dt/01-html-basics/05-links/links.html
+++ b/dt/01-html-basics/05-links/links.html
@@ -73,5 +73,8 @@
     <li><a href="page-2.html">Page 2</a></li>
     <li><a href="page-3.html">Page 3</a></li>
   </ul>
+  <p>
+    <a href="../index.html">index.html</a>
+  </p>
 </body>
 </html>
