--- a/dt/01-html-basics/index.html
+++ b/dt/01-html-basics/index.html
@@ -15,7 +15,20 @@
     <li><a href="04-the-lists-ul-and-ol/the-lists-ul-and-ol.html">the lists ul and ol</a></li>
     <li><a href="05-links/links.html">links</a></li>
     <li><a href="06-images/images.html">images</a></li>
-    <li><a href="07-tables/tables.html">tables</a></li>
+    <li>
+      <a href="07-tables/tables.html">tables</a>
+      <ul>
+        <li><a href="07-tables/tables.html#working-with-tables">working with tables</a></li>
+        <li><a href="07-tables/tables.html#example-1">example 1</a></li>
+        <li><a href="07-tables/tables.html#task-1">task 1</a></li>
+        <li><a href="07-tables/tables.html#width-and-height">width and height</a></li>
+        <li><a href="07-tables/tables.html#example-2">example 2</a></li>
+        <li><a href="07-tables/tables.html#task-2">task 2</a></li>
+        <li><a href="07-tables/tables.html#header-cells">header cells</a></li>
+        <li><a href="07-tables/tables.html#example-3">example 3</a></li>
+        <li><a href="07-tables/tables.html#task-3">task 3</a></li>
+      </ul>
+    </li>
     <li><a href="08-workshop/workshop.html">workshop</a></li>
   </ol>
 </body>
