--- a/ib/labs/content/distance.html
+++ b/ib/labs/content/distance.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Новости дистанционного обучения</title>
+		<link rel="stylesheet" href="../css/style.css">
 	</head>
 	<body>
 		<article>
