--- a/ib/labs/index.html
+++ b/ib/labs/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Центр Компьютерного обучения Специалист</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
