Многоуровневый нумерованный список

--- a/dt/01-html-basics/index.html
+++ b/dt/01-html-basics/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Основы html</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <h1>HTML BASIC</h1>
@@ -17,7 +18,7 @@
     <li><a href="06-images/images.html">images</a></li>
     <li>
       <a href="07-tables/tables.html">tables</a>
-      <ul>
+      <ol>
         <li><a href="07-tables/tables.html#working-with-tables">working with tables</a></li>
         <li><a href="07-tables/tables.html#example-1">example 1</a></li>
         <li><a href="07-tables/tables.html#task-1">task 1</a></li>
@@ -27,7 +28,7 @@
         <li><a href="07-tables/tables.html#header-cells">header cells</a></li>
         <li><a href="07-tables/tables.html#example-3">example 3</a></li>
         <li><a href="07-tables/tables.html#task-3">task 3</a></li>
-      </ul>
+      </ol>
     </li>
     <li><a href="08-workshop/workshop.html">workshop</a></li>
   </ol>
