--- a/mozilla/src/html-basic.html
+++ b/mozilla/src/html-basic.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Anatomy of HTML</title>
-  <link rel="stylesheet" href="styles/style.css" type="text/css">
+  <title>html basic</title>
+  <link rel="stylesheet" href="css/style.css" type="text/css">
+  <link rel="stylesheet" href="css/numbering.css" type="text/css">
 </head>
 <body>
   <h1>Основы HTML</h1>
-  <ul>
+  <ol>
     <li><a href="#element-anatomy">Анатомия html элемента</a></li>
     <li><a href="#nested-element">Вложенные элементы</a></li>
     <li><a href="#empty-elements">Пустые элементы</a></li>
     <li><a href="#document-anatomy">Анатомия HTML документа</a></li>
     <li><a href="#images">Изображение</a></li>
     <li><a href="#text-markup">Разметка текста</a>
-      <ul>
+      <ol>
         <li><a href="#headings">Заголовки</a></li>
         <li><a href="#paragraphs">Абзацы</a></li>
         <li><a href="#lists">Списки</a></li>
-      </ul>
+      </ol>
     </li>
     <li><a href="#links">Ссылки</a></li>
-  </ul>
+  </ol>
   <h2 id="element-anatomy"><a href="#element-anatomy">Анатомия html элемента</a></h2>
   <p>
     Главными частями нашего элемента являются:
@@ -51,7 +52,7 @@
     <li>Значение атрибута, заключённое с двух сторон в кавычки.</li>
   </ol>
 
-  <h3 id="nested-element"><a href="#nested-element">Вложенные элементы</a></h3>
+  <h2 id="nested-element"><a href="#nested-element">Вложенные элементы</a></h2>
   <p>
     Вы также можете располагать элементы внутри других элементов — это называется вложением. Если мы хотим заявить, что наша кошка очень раздражена, мы можем заключить слово "очень" в элемент &lt;strong&gt; , который указывает, что слово должно быть сильно акцентированно:
   </p>
@@ -65,7 +66,7 @@
     Элементы должны открываться и закрываться правильно, поэтому они явно располагаются внутри или снаружи друг друга. Если они перекрываются, как в примере выше,  ваш веб-браузер будет пытаться сделать наилучшее предположение на основе того, что вы пытались сказать, что может привести к неожиданным результатам. Так что не стоит этого делать!
   </p>
 
-  <h3 id="empty-elements"><a href="#empty-elements">Пустые элементы</a></h3>
+  <h2 id="empty-elements"><a href="#empty-elements">Пустые элементы</a></h2>
   <p>
     Некоторые элементы не имеют контента, и называются пустыми элементами. Возьмём  элемент &lt;img&gt;, который уже имеется в нашем HTML:
   </p>
@@ -92,16 +93,16 @@
       &lt;/body&gt;
     &lt;/html&gt;
   </pre>
-  <ul>
+  <ol>
     <li>&lt;!DOCTYPE html&gt; — доктайп. В прошлом, когда HTML был молод (около 1991/1992), доктайпы должны были выступать в качестве ссылки на набор правил, которым HTML страница должна была следовать, чтобы считаться хорошим HTML, что могло означать автоматическую проверку ошибок и другие полезные вещи. Однако в наши дни, никто не заботится об этом, и они на самом деле просто исторический артефакт, который должен быть включён для того, что бы все работало правильно. На данный момент это все, что вам нужно знать.</li>
     <li>&lt;html&gt;&lt;/html&gt; - Этот элемент оборачивает весь контент на всей странице, и иногда известен как корневой элемент.</li>
     <li>&lt;head&gt;&lt;/head&gt; — Этот элемент выступает в качестве контейнера для всего, что вы пожелаете включить на HTML страницу, но не являющегося контентом, который вы показываете пользователям вашей страницы. К ним относятся такие вещи, как ключевые слова и описание страницы, которые будут появляться в результатах поиска, CSS стили нашего контента, кодировка и многое другое.</li>
     <li>&lt;body&gt;&lt;/body&gt; — элемент &lt;body&gt;. В нем содержится весь контент, который вы хотите показывать пользователям, когда они посещают вашу страницу, будь то текст, изображения, видео, игры, проигрываемые аудиодорожки или что-то ещё.</li>
     <li>&lt;meta charset="utf-8"&gt; — этот элемент устанавливает UTF-8 кодировку вашего документа, которая включает в себя большинство символов из всех известных человечеству языков. По сути, теперь документ может обрабатывать любой текстовый контент, который вы в него вложите. Нет причин не устанавливать её, так как это может помочь избежать некоторых проблем в дальнейшем.</li>
     <li>&lt;title&gt;&lt;/title&gt; — элемент &lt;title&gt;. Этот элемент устанавливает заголовок для вашей страницы, который является названием, появляющимся на вкладке браузера загружаемой страницы, и используется для описания страницы, когда вы добавляете её в закладки/избранное.</li>
-  </ul>
+  </ol>
 
-  <h3 id="images"><a href="#images">Изображения</a></h3>
+  <h2 id="images"><a href="#images">Изображения</a></h2>
   <pre>
     &lt;img src="images/firefox-icon.png" alt="Mоё тестовое изображение"&gt;
   </pre>
@@ -129,7 +130,7 @@
   <p>
     В этом разделе рассмотрим некоторые из основных HTML элементов, которые вы будете использовать для разметки текста.
   </p>
-  <h4 id="headings"><a href="#headings">Заголовки</a></h4>
+  <h3 id="headings"><a href="#headings">Заголовки</a></h3>
   <p>
     Элементы заголовка позволяют вам указывать определённые части вашего контента в качестве заголовков или подзаголовков. Точно так же, как книга имеет название, названия глав и подзаголовков, HTML документ может содержать то же самое. HTML включает шесть уровней заголовков &lt;h1&gt; - &lt;h6&gt;, хотя обычно вы будете использовать не более 3-4 :
   </p>
@@ -140,13 +141,13 @@
     &lt;h4&gt;Мой под-подзаголовок&lt;/h4&gt;
   </pre>
 
-  <h4 id="paragraphs"><a href="#paragraphs">Абзацы</a></h4>
+  <h3 id="paragraphs"><a href="#paragraphs">Абзацы</a></h3>
   <p>
     Как было сказано раньше, элемент <p> предназначен для абзацев текста; вы будете использовать их регулярно при разметке текстового контента:
   </p>
   &lt;p&gt;>Это одиночный абзац&lt;/p&gt;
 
-  <h4 id="lists"><a href="#lists">Списки</a></h4>
+  <h3 id="lists"><a href="#lists">Списки</a></h3>
   <p>
     Большая часть веб-контента является списками и HTML имеет специальные элементы для них. Разметка списка всегда состоит по меньшей мере из двух элементов. Наиболее распространёнными типами списков являются нумерованные и ненумерованные списки:
   </p>
@@ -159,7 +160,7 @@
     </li>
   </ul>
   <p>
-    Каждый пункт внутри списков располагается внутри элемента <li> (list item, элемент списка).
+    Каждый пункт внутри списков располагается внутри элемента &lt;li&gt; (list item, элемент списка).
   </p>
   <p>
     Например, если мы хотим включить часть следующего фрагмента абзаца в список:
@@ -189,7 +190,7 @@
         &lt;a&gt;>Манифест Mozilla&lt;/a&gt;
     </li>
     <li>
-      Задайте элементу <a> атрибут href, например так:<br>
+      Задайте элементу &lt;a&gt; атрибут href, например так:<br>
         &lt;a&gt; href="">Манифест Mozilla&lt;/a&gt;
     </li>
     <li>
@@ -201,9 +202,9 @@
     Вы можете получить неожиданные результаты, если в самом начале веб-адреса вы опустите https:// или http:// часть, называемую протоколом. После создания ссылки, кликните по ней, чтобы убедиться, что она направляет вас туда, куда вы хотели.
   </p>
   <p>
-    <i>href сначала может выглядеть довольно непонятым выбором для имени атрибута. Если у вас возникли проблемы с тем, чтобы запомнить его, можете запомнить, что атрибут href образуется как</i><b> hypertext reference</b>("гипертекстовая ссылка").
+    <em>href сначала может выглядеть довольно непонятым выбором для имени атрибута. Если у вас возникли проблемы с тем, чтобы запомнить его, можете запомнить, что атрибут href образуется как</em> <strong>hypertext reference</strong>("гипертекстовая ссылка").
   </p>
 
-  <img src="images/finished-test-page-small.png" alt="finished-test">
+  <img src="images/finished-test-page-small.png" alt="mozilla-finished-test">
 </body>
 </html>
