--- a/ib/labs/index.html
+++ b/ib/labs/index.html
@@ -6,10 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Центр Компьютерного обучения Специалист</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pompiere&family=Roboto&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header>
-        <h1 align="center">&laquo;Специалист&raquo; &mdash; лучший в России компьютерный учебный центр</h1>
+        <h1>&laquo;Специалист&raquo; &mdash; лучший в России компьютерный учебный центр</h1>
     </header>
 
     <nav>
@@ -37,17 +41,17 @@
     </section>
 
     <aside>
-        <p align="right">
+        <p class="review-mail">
             Отзывы о сайте направляйте веб-мастеру:
             <a href="mailto:">webmaster@specialist.ru</a>
         </p>
-        <h4 align="center">Ближайшие курсы</h4>
-        <p align="center">
-            PHP | JavaScript | Другие
+        <h4>Ближайшие курсы</h4>
+        <p class="courses">
+            HTML | CSS | PHP | JavaScript 
         </p>
     </aside>
 
-    <hr width="90%">
+    <hr>
 
     <footer>
         <blockquote id="addres">
