--- a/mozilla/src/index.html
+++ b/mozilla/src/index.html
@@ -4,32 +4,43 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles/style.css" type="text/css">
-  <title>Основы HTML</title>
+  <link rel="stylesheet" href="css/style.css" type="text/css">
+  <link rel="stylesheet" href="css/numbering.css" type="text/css">
+  <title>Начало работы с Вебом</title>
 </head>
 <body>
-  <h1>Основы HTML</h1>
-  <p>
-    HTML (Hypertext Markup Language) - это код, который используется для структурирования и отображения веб-страницы и её контента. Например, контент может быть структурирован внутри множества параграфов, маркированных списков или с использованием изображений и таблиц данных. Как видно из названия, эта статья даст вам базовое понимание HTML и его функций.
-  </p>
-
-  <h2>Что такое HTML на самом деле?</h2>
-  <p>
-    HTML не является языком программирования; это язык разметки, и используется, чтобы сообщать вашему браузеру, как отображать веб-страницы, которые вы посещаете. Он может быть сложным или простым, в зависимости от того, как хочет веб-дизайнер. HTML состоит из ряда элементов, которые вы используете, чтобы вкладывать или оборачивать различные части контента, чтобы заставить контент отображаться или действовать определённым образом. Ограждающие теги могут сделать слово или изображение ссылкой на что-то ещё, могут сделать слова курсивом, сделать шрифт больше или меньше и так далее. Например, возьмём следующую строку контента:
-  </p>
-  <pre>
-    Моя кошка очень раздражена
-  </pre>
-  <p>
-    Если бы мы хотели, чтобы строка стояла сама по себе, мы могли бы указать, что это абзац, заключая его в теги абзаца:
-  </p>
-  <pre>
-    &lt;p&gt;Моя кошка очень раздражена&lt;/p&gt;
-  </pre>
-  <ul>
-    <li><h3><a href="the-anatomy-of-html.html">Анатомия html элемента</a></h3></li>
-    <li><h3><a href="the-anatomy-of-a-css-ruleset.html">Анатомия набора правил CSS</a></h3></li>
-    <li><h3><a href="working-with-files.html">Работа с файлами</a></h3></li>
-  </ul>
+  <h1>Начало работы с Вебом</h1>
+  <ol>
+    <li><a href="html-basic.html">Основы html</a>
+      <ol>
+        <li><a href="html-basic.html#element-anatomy">Анатомия html элемента</a></li>
+        <li><a href="html-basic.html#nested-element">Вложенные элементы</a></li>
+        <li><a href="html-basic.html#empty-elements">Пустые элементы</a></li>
+        <li><a href="html-basic.html#document-anatomy">Анатомия HTML документа</a></li>
+        <li><a href="html-basic.html#images">Изображение</a></li>
+        <li><a href="html-basic.html#text-markup">Разметка текста</a>
+          <ol>
+            <li><a href="html-basic.html#headings">Заголовки</a></li>
+            <li><a href="html-basic.html#paragraphs">Абзацы</a></li>
+            <li><a href="html-basic.html#lists">Списки</a></li>
+          </ol>
+        </li>
+        <li><a href="html-basic.html#links">Ссылки</a></li>
+      </ol>
+    </li>
+    <li><a href="css-basics.html">Основы css</a>
+      <ol>
+        <li><a href="css-basics.html#what-is-css">Так что же такое CSS?</a></li>
+        <li><a href="css-basics.html#anatomy-rule">Анатомия набора правил CSS</a></li>
+        <li><a href="css-basics.html#multiple-items">Выбор нескольких элементов</a></li>
+        <li><a href="css-basics.html#types-of-selectors">Разные типы селекторов</a></li>
+      </ol>
+    </li>
+    <li><a href="working-with-files.html">Работа с файлами</a>
+      <ol>
+        <li></li>
+      </ol>
+    </li>
+  </ol>
 </body>
 </html>
