--- a/ib/labs/index.html
+++ b/ib/labs/index.html
@@ -13,6 +13,11 @@
 </head>
 <body>
     <header>
+        <p>
+            <a href="http://www.specialist.ru">
+                <img src="imgs/logo.gif" alt="Центр обучения" width="103" height="50" title="Ссылка http://www.specialist.ru">
+            </a>
+        </p>
         <h1>&laquo;Специалист&raquo; &mdash; лучший в России компьютерный учебный центр</h1>
     </header>
 
@@ -45,11 +50,18 @@
             Отзывы о сайте направляйте веб-мастеру:
             <a href="mailto:">webmaster@specialist.ru</a>
         </p>
+    </aside>
+    <div>
+        <p>
+            <a href="http://ya.ru" >
+                <img src="imgs/sql.jpg" alt="sql" width="468" height="60" title="Ссылка на http://ya.ru">
+            </a>
+        </p>
         <h4>Ближайшие курсы</h4>
-        <p class="courses">
+        <p>
             HTML | CSS | PHP | JavaScript 
         </p>
-    </aside>
+    </div>
 
     <hr>
 
