--- a/mozilla/src/index.html
+++ b/mozilla/src/index.html
@@ -7,6 +7,9 @@
   <link rel="stylesheet" href="css/style.css" type="text/css">
   <link rel="stylesheet" href="css/numbering.css" type="text/css">
   <title>Начало работы с Вебом</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Ubuntu&family=Ubuntu+Mono:ital@1&display=swap" rel="stylesheet">
 </head>
 <body>
   <h1>Начало работы с Вебом</h1>
@@ -34,6 +37,8 @@
         <li><a href="css-basics.html#anatomy-rule">Анатомия набора правил CSS</a></li>
         <li><a href="css-basics.html#multiple-items">Выбор нескольких элементов</a></li>
         <li><a href="css-basics.html#types-of-selectors">Разные типы селекторов</a></li>
+        <li><a href="css-basics.html#fonts-and-text">Шрифты и текст</a></li>
+        <li><a href="css-basics.html#blocks-blocks">Блоки, блоки и ещё раз блоки</a></li>
       </ol>
     </li>
     <li><a href="working-with-files.html">Работа с файлами</a>
