--- a/mozilla/src/css-basics.html
+++ b/mozilla/src/css-basics.html
@@ -103,5 +103,88 @@
   <p>
     Существует множество различных типов селектора. Выше мы рассматривали только селектор элементов, который выбирает все элементы определённого типа в HTML документе. Но мы можем сделать выбор более конкретным. Вот некоторые из наиболее распространённых типов селекторов:
   </p>
+  <table border="1">
+    <tr>
+      <th>Имя селектора</th>
+      <th>Что выбирает</th>
+      <th>Пример</th>
+    </tr>
+    <tr>
+      <td>Селектор элемента (иногда называемый селектором тега или типа)</td>
+      <td>Все HTML-элемент(ы) указанного типа.</td>
+      <td>p<br> Выбирает &lt;p&gt;</td>
+    </tr>
+    <tr>
+      <td>ID селектор</td>
+      <td>Элемент на странице с указанным ID на данной HTML. Лучше всего использовать один элемент для каждого ID (и конечно один ID для каждого элемента), даже если вам разрешено использовать один и тот же ID для нескольких элементов.</td>
+      <td>#my-id <br>Выбирает &lt;p id="my-id"&gt; или <br>&lt;a id="my-id"&gt;</td>
+    </tr>
+    <tr>
+      <td>Селектор класса</td>
+      <td>Элемент(ы) на странице с указанным классом (множество экземпляров класса может объявляться на странице).</td>
+      <td>.my-class <br>Выбирает &lt;p class="my-class"&gt; и <br>&lt;a class="my-class"&gt;</td>
+    </tr>
+    <tr>
+      <td>Селектор атрибута</td>
+      <td>Элемент(ы) на странице с указанным атрибутом.</td>
+      <td>img[src] <br>Выбирает &lt;img src="myimage.png"&gt;<br> но не &lt;img&gt;</td>
+    </tr>
+    <tr>
+      <td>Селектор псевдокласса</td>
+      <td>Указанные элемент(ы), но только в случае определённого состояния, например, при наведении курсора.</td>
+      <td>a:hover <br>Выбирает &lt;a&gt;, но только тогда, когда указатель мыши наведён на ссылку.</td>
+    </tr>
+  </table>
+  <p>
+    Существует ещё много селекторов для изучения, и вы можете найти более подробный список в нашем <a href="https://developer.mozilla.org/ru/docs/Learn/CSS/Building_blocks/Selectors">Руководстве селекторов (ru)</a>.
+  </p>
+  <h2 id="fonts-and-text"><a href="#fonts-and-text">Шрифты и текст</a></h2>
+  <p>
+    Теперь, когда мы изучили некоторые основы CSS, давайте добавим ещё несколько правил и информацию в наш файл <code>style.css</code>, чтобы наш пример хорошо выглядел. Прежде всего, давайте сделаем, чтобы наши шрифты и текст выглядели немного лучше.
+  </p>
+  <ol>
+    <li>
+      Прежде всего, вернитесь и найдите вывод из <a href="https://developer.mozilla.org/ru/docs/Learn/Getting_started_with_the_web/What_will_your_website_look_like#%D1%88%D1%80%D0%B8%D1%84%D1%82">Google Fonts</a>, который вы уже где-то сохранили. Добавьте элемент <code>&lt;link&gt;</code> где-нибудь внутри шапки вашего <code>index.html</code> (снова, в любом месте между тегами <code>&lt;head&gt;</code> и <code>&lt;/head&gt;</code>).<br>Это будет выглядеть примерно так: 
+      <pre>
+        &lt;link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'&gt;
+      </pre>
+        Этот код связывает вашу страницу с таблицой стилями, которая загружает семейство шрифтов <code>Open Sans</code> вместе с вашей страницей и позволяет вам применять их к вашим HTML-элементам используя свою собственную таблицу стилей.
+    </li>
+    <li>
+      Затем, удалите существующее правило в вашем <code>style.css</code> файле. Это был хороший тест, но красный текст, на самом деле, не очень хорошо выглядит.
+    </li>
+    <li>
+      Добавьте следующие строки в нужное место, заменив строку <code>placeholder</code> актуальной <code>font-family</code> строкой, которую вы получили из <code>Google Fonts</code>. ( <code>font-family</code> просто означает, какой шрифт(ы) вы хотите использовать для вашего текста). Это правило устанавливает глобальный базовый шрифт и размер шрифта для всей страницы (поскольку <code>&lt;html&gt;</code> является родительским элементом для всей страницы, и все элементы внутри него наследуют такой же <code>font-size</code> и <code>font-family</code> ):
+      <pre>
+        html {
+          font-size: 10px; /* px значит 'пиксели': базовый шрифт будет 10 пикселей в высоту. */
+          font-family: placeholder: здесь должно быть имя шрифта из Google fonts
+        }
+      </pre>
+      <strong>Примечание:</strong> Все в CSS документе между <strong>/*</strong> и <strong>*/</strong> является <strong>CSS комментарием</strong>, который браузер игнорирует при исполнении кода. Это место, где вы можете написать полезные заметки о том, что вы делаете.
+    <li>
+      Теперь мы установим размер шрифта для элементов, содержащих текст внутри HTML тела (<a href="https://developer.mozilla.org/ru/docs/Web/HTML/Element/Heading_Elements">&lt;h1&gt;</a>, <a href="https://developer.mozilla.org/ru/docs/Web/HTML/Element/li">&lt;li&gt;</a>, и <a href="https://developer.mozilla.org/ru/docs/Web/HTML/Element/p">&lt;p&gt;</a>). Мы также отцентрируем текст нашего заголовка и установим некоторую высоту строки и расстояние между буквами в теле документа, чтобы сделать его немного более удобным для чтения:
+      <pre>
+        h1 {
+          font-size: 60px;
+          text-align: center;
+        }
+        
+        p, li {
+          font-size: 16px;
+          line-height: 2;
+          letter-spacing: 1px;
+        }
+      </pre>
+    </li>
+  </ol>
+  <p>
+    Вы можете настроить значения <code>px</code> так, как вам нравится, чтобы ваш дизайн выглядел так, как вы хотите, но, в общем, ваш дизайн должен выглядеть вот так:
+  </p>
+  <p>
+    <img src="images/website-screenshot-font-small.png" alt="mozilla-font-small">
+  </p>
+
+  <h2 id="blocks-blocks"><a href="#blocks-blocks">Блоки, блоки и ещё раз блоки</a></h2>
 </body>
 </html>
