--- a/ib/demo/module-6/list-ul.html
+++ b/ib/demo/module-6/list-ul.html
@@ -1,13 +1,29 @@
-﻿<!DOCTYPE HTML>
+<!DOCTYPE HTML>
 <html>
-	<head>
-		<title>Демонстрация: упорядоченный список</title>
-	</head>
-	<body>
-		Позиция один
-		Позиция два
-		Позиция три
-		Позиция четыре
-		Позиция пять
-	</body>
+<head>
+  <title>Демонстрация: неупорядоченный список</title>
+  <style>
+    ul{
+      /* list-style-type: disc; */
+      /* list-style-type: circle; */
+      /* list-style-type: square; */
+      /* list-style-type: none; */
+
+      /* list-style-position: inside; */
+      list-style-image: url("ball.gif");
+    }
+    li{
+      /* background-color: yellow; */
+    }
+  </style>
+</head>
+<body>
+  <ul>
+    <li>Позиция один</li>
+    <li>Позиция два</li>
+    <li>Позиция три</li>
+    <li>Позиция четыре</li>
+    <li>Позиция пять</li>
+</ul>
+</body>
 </html>
