--- a/mozilla/src/css-basics.html
+++ b/mozilla/src/css-basics.html
@@ -186,5 +186,96 @@
   </p>
 
   <h2 id="blocks-blocks"><a href="#blocks-blocks">Блоки, блоки и ещё раз блоки</a></h2>
+  <p>
+    Одна вещь, которую вы заметите в написании CSS, заключается в том, что многое из этого касается блоков - настройка их размера, цвета, положения и т.д. Большинство HTML-элементов на странице можно рассматривать как блоки, расположенные друг над другом.
+  </p>
+  <img src="images/boxes.jpg" alt="boxes">
+  <p>
+    Не удивительно, макет CSS основан, главным образом, на блочной модели (box model). Каждый из блоков, занимающий пространство на вашей странице имеет такие свойства, как:
+  </p>
+  <ul>
+    <li><strong>padding</strong>, пространство только вокруг контента (например, вокруг абзаца текста)</li>
+    <li><strong>border</strong>, сплошная линия, которая расположена рядом с padding</li>
+    <li><strong>margin</strong>, пространство вокруг внешней стороны элемента</li>
+  </ul>
+  <img src="images/box-model.png" alt="box-model">
+  <p>В этом разделе мы также используем:</p>
+  <ul>
+    <li><strong>width</strong> (ширину элемента)</li>
+    <li><strong>background-color</strong>, цвет позади контента и padding элементов</li>
+    <li><strong>color</strong>, цвет контента элемента (обычно текста)</li>
+    <li><strong>text-shadow:</strong> устанавливает тень на тексте внутри элемента</li>
+    <li><strong>display:</strong> устанавливает режим отображения элемента</li>
+  </ul>
+
+  <h2 id="page-color"><a href="#page-color">Изменение цвета страницы</a></h2>
+  <pre>
+    html {
+      background-color: #00539F;
+    }
+  </pre>
+  <p>
+    Это правило устанавливает цвет фона для всей страницы. Измените код цвета сверху, на цвет который вы выбрали при планировании вашего сайта.
+  </p>
+
+  <h2 id="page-body"><a href="#page-body">Разбираемся с телом(body)</a></h2>
+  <pre>
+    body {
+      width: 600px;
+      margin: 0 auto;
+      background-color: #FF9500;
+      padding: 0 20px 20px 20px;
+      border: 5px solid black;
+    }
+  </pre>
+  <p>
+    Теперь для &lt;body&gt; элемента. Здесь есть немало деклараций, так что давайте пройдём через них всех по одному:
+  </p>
+  <ul>
+    <li>
+      <strong>width:</strong> 600px; — заставляет тело быть всегда 600 пикселей в ширину.
+    </li>
+    <li>
+      <strong>margin:</strong> 0 auto; — когда вы устанавливаете два значения для таких свойств как margin или padding, первое значение элемента влияет на верхнюю и нижнюю сторону (делает их 0 в данном случае), и второе значение на левую и правую сторону (здесь, auto является особым значением, которое делит доступное пространство по горизонтали поровну слева и справа). Вы также можете использовать один, три или четыре значения, как описано здесь.
+    </li>
+    <li>
+      <strong>background-color: #FF9500;</strong> — как и прежде, устанавливает цвет фона элемента. Я использовал красновато-оранжевый для тела, в отличие от темно-синего цвета для <a href="https://developer.mozilla.org/ru/docs/Web/HTML/Element/html" title="Ссылка на сайт mozilla">html</a> элемента, но не стесняйтесь и экспериментируйте.
+    </li>
+    <li>
+      <strong>padding:</strong> 0 20px 20px 20px; — у нас есть четыре значения, установленные для padding, чтобы сделать немного пространства вокруг нашего контента. В этот раз мы не устанавливаем padding на верхней части тела, но делаем 20 пикселей слева, снизу и справа. Значения устанавливаются сверху, справа, снизу, слева, в таком порядке.
+    </li>
+    <li>
+      <strong>border:</strong> 5px solid black; — просто устанавливает сплошную чёрную рамку шириной 5 пикселей со всех сторон тела.
+    </li>
+  </ul>
+  <h2 id="positioning-and-styling-h1"><a href="#positioning-and-styling-h1">Позиционирование и стилизация нашего заголовка главной страницы</a></h2>
+  <pre>
+    h1 {
+      margin: 0;
+      padding: 20px 0;
+      color: #00539F;
+      text-shadow: 3px 3px 1px black;
+    }
+  </pre>
+  <p>
+    Вы, возможно, заметили, что есть ужасный разрыв в верхней части тела. Это происходит, потому что браузеры применяют некоторый стиль по умолчанию для элемента <a href="https://developer.mozilla.org/ru/docs/Web/HTML/Element/Heading_Elements">h1(ru-RU)</a> (по сравнению с другими), даже если вы не применяли какой-либо CSS вообще! Это может звучать как плохая идея, но мы хотим, чтобы веб-страница без стилей имела базовую читаемость. Чтобы избавиться от разрыва, мы переопределили стиль по умолчанию, установив margin: 0;
+  </p>
+  <p>
+    Здесь, мы использовали одно довольно интересное свойство - это text-shadow, которое применяет тень к текстовому контенту элемента. Оно имеет следующие четыре значения:
+  </p>
+  <ul>
+    <li>
+      Первое значение пикселей задаёт горизонтальное смещение тени от текста — как далеко она движется поперёк: отрицательное значение должно двигать её влево.
+    </li>
+    <li>
+      Второе значение пикселей задаёт вертикальное смещение тени от текста — как далеко она движется вниз, в этом примере: отрицательное значение должно переместить её вверх.
+    </li>
+    <li>
+      Третье значение пикселей задаёт радиус размытия тени — большее значение будет означать более размытую тень.
+    </li>
+    <li>
+      Четвёртое значение задаёт основной цвет тени.
+    </li>
+  </ul>
 </body>
 </html>
