--- a/mozilla/src/html-basic.html
+++ b/mozilla/src/html-basic.html
@@ -39,7 +39,7 @@
   <p>
     Элементы также могут иметь атрибуты, которые выглядят так:
   </p>
-  <img src="images/attribute.png" alt="attribute">
+  <img class="attribute-png"src="images/attribute.png" alt="attribute">
   <p>
     Атрибуты содержат дополнительную информацию об элементе, которую вы не хотите показывать в фактическом контенте. В данном случае, class это имя атрибута, а editor-note это значение атрибута. Класс позволяет дать элементу идентификационное имя, которое может позже использоваться, чтобы обращаться к элементу с информацией о стиле и прочих вещах.
   </p>
