--- a/mozilla/src/index.html
+++ b/mozilla/src/index.html
@@ -39,6 +39,9 @@
         <li><a href="css-basics.html#types-of-selectors">Разные типы селекторов</a></li>
         <li><a href="css-basics.html#fonts-and-text">Шрифты и текст</a></li>
         <li><a href="css-basics.html#blocks-blocks">Блоки, блоки и ещё раз блоки</a></li>
+        <li><a href="css-basics.html#page-color">Изменение цвета страницы</a></li>
+        <li><a href="css-basics.html#page-body">Разбираемся с телом(body)</a></li>
+        <li><a href="css-basics.html#positioning-and-styling-h1">Позиционирование и стилизация нашего заголовка главной страницы</a></li>
       </ol>
     </li>
     <li><a href="working-with-files.html">Работа с файлами</a>
@@ -46,6 +49,47 @@
         <li></li>
       </ol>
     </li>
+    <li><a href="list-styling.html">Стилизация списка</a>
+      <ol>
+        <li></li>
+      </ol>
+    </li>
+    <li><a href="html-tables.html">Таблицы html</a>
+      <ol>
+        <li></li>
+      </ol>
+    </li>
   </ol>
+
+  <hr>
+
+  <ul>
+    <li>
+      <a href="https://developer.mozilla.org/ru/docs/Learn/CSS/Styling_text/Styling_lists" title="mozilla">Стилизация списков</a>
+    </li>
+    <li>
+      <a href="https://developer.mozilla.org/ru/docs/Learn/HTML/Tables" title="mozilla">HTML таблицы</a>
+      <ul>
+        <li>
+          <a href="https://developer.mozilla.org/ru/docs/Learn/HTML/Tables/Basics"title="mozilla">html таблицы основы</a>
+        </li>
+        <li>
+          <a href="https://developer.mozilla.org/ru/docs/Learn/HTML/Tables/Advanced"title="mozilla">HTML таблицы продвинутые возможности и доступность</a>
+        </li>
+        <li>
+          <a href="https://developer.mozilla.org/ru/docs/Learn/HTML/Tables/Structuring_planet_data"title="mozilla">Аттестация: Структурирование данных о планетах</a>
+        </li>
+      </ul>
+    </li>
+    <li>
+      <a href="https://developer.mozilla.org/ru/docs/Web/HTML/Block-level_elements" title="mozilla">Блочные элементы</a>
+    </li>
+    <li>
+      <a href="https://developer.mozilla.org/ru/docs/Web/HTML/Inline_elements" title="mozilla">Строчные элементы</a>
+    </li>
+    <li>
+      <a href="https://developer.mozilla.org/ru/docs/Learn/Common_questions/What_are_browser_developer_tools"title="mozilla">Обзор инструментов разработки в браузерах</a>
+    </li>
+  </ul>
 </body>
 </html>
