--- a/ib/demo/module-6/list-dl.html
+++ b/ib/demo/module-6/list-dl.html
@@ -1,14 +1,22 @@
-﻿<!DOCTYPE HTML>
+<!DOCTYPE HTML>
 <html>
-	<head>
-		<title>Демонстрация: список определений</title>
-	</head>
-	<body>
-		Африка
-			второй по площади континент после Евразии, омываемый Средиземным морем с севера,  Красным - с северо-востока, Атлантическим океаном с запада и Индийским океаном с востока и юга.
-		Азия
-			самая большая часть света, образует вместе с Европой материк Евразию.
-		Европа
-			часть света, имеет площадь около 10,5 млн км. и население 830,4 млн человек. Вместе с Азией образует материк Евразия.	
-	</body>
+<head>
+  <title>Демонстрация: список определений</title>
+</head>
+<body>
+  <dl>
+    <dt>Африка</dt>
+      <dd>
+        второй по площади континент после Евразии, омываемый Средиземным морем с севера, Красным - с северо-востока, Атлантическим океаном с запада и Индийским океаном с востока и юга.
+      </dd>
+    <dt>Азия</dt>
+      <dd>
+        самая большая часть света, образует вместе с Европой материк Евразию.
+      </dd>
+    <dt>Европа</dt>
+      <dd>
+        часть света, имеет площадь около 10,5 млн км. и население 830,4 млн человек. Вместе с Азией образует материк Евразия.	
+      </dd>
+  </dl>
+</body>
 </html>
