--- a/ib/demo/module-6/list-ol.html
+++ b/ib/demo/module-6/list-ol.html
@@ -1,13 +1,26 @@
-﻿<!DOCTYPE HTML>
+<!DOCTYPE HTML>
 <html>
-	<head>
-		<title>Демонстрация: неупорядоченный список</title>
-	</head>
-	<body>
-		Позиция один
-		Позиция два
-		Позиция три
-		Позиция четыре
-		Позиция пять
-	</body>
+  <head>
+    <title>Демонстрация: упорядоченный список</title>
+    <style>
+      ol{
+        /* list-style-type: decimal; */
+        /* list-style-type: decimal-leading-zero; */
+        /* list-style-type: lower-alpha; */
+        /* list-style-type: upper-alpha; */
+        /* list-style-type: upper-latin; */
+        /* list-style-type: upper-roman; */
+        list-style-type: none;
+      }
+    </style>
+  </head>
+  <body>
+    <ol>
+      <li>Позиция один</li>
+      <li>Позиция два</li>
+      <li>Позиция три</li>
+      <li>Позиция четыре</li>
+      <li>Позиция пять</li>
+    </ol>
+  </body>
 </html>
