--- a/ib/labs/courses/php.html
+++ b/ib/labs/courses/php.html
@@ -1,21 +1,25 @@
 ﻿<!doctype html>
 <html>
-	<head>
-		<title>Курсы PHP</title>
-	</head>
-	<body>
-		Курсы PHP
-		
-		Название	Ак.часов		
-		
-		PHP. Уровень 1. Основы создания сайтов	24
-		
-		PHP. Уровень 2. Разработка web-сайтов и взаимодействие с MySQL	24
-		
-		PHP. Уровень 3. Профессиональная разработка на PHP5	24	
-		
-		РНР. Уровень 4. Проектирование и разработка сложных веб-проектов на РНР 5	24	
-		
-		Всего Ак. часов	96
-	</body>
+<head>
+  <title>Курсы PHP</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+  <table>
+    <caption>Курсы PHP</caption>
+    <thead>
+      <tr><th>Название</th><th>Ак. часов</th></tr>
+    </thead>
+    <tfoot>
+      <tr><td>Всего Ак. часов</td><td>24</td></tr>
+    </tfoot>
+    <tbody>
+      <tr><td>PHP. Уровень 1. Основы создания сайтов</td><td class="time">24</td></tr>
+      <tr><td>PHP. Уровень 2. Разработка web-сайтов и взаимодействие с MySQL</td><td class="time">24</td></tr>
+      <tr><td>PHP. Уровень 3. Профессиональная разработка на PHP5</td><td class="time">24</td></tr>
+      <tr><td>PHP. Уровень 5. Проектирование и разработка сложных веб-проектов на PHP5</td><td class="time">24</td></tr>
+    </tbody>
+  </table>
+
+</body>
 </html>	
