--- a/ib/labs/index.html
+++ b/ib/labs/index.html
@@ -1,37 +1,51 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Центр Компьютерного обучения Специалист</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Pompiere&family=Roboto&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Центр Компьютерного обучения Специалист</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Pompiere&family=Roboto&display=swap" rel="stylesheet">
 
 </head>
 <body>
-    <header>
-        <p>
-            <a href="http://www.specialist.ru">
-                <img src="imgs/logo.gif" alt="Центр обучения" width="103" height="50" title="Ссылка http://www.specialist.ru">
-            </a>
-        </p>
-        <h1>&laquo;Специалист&raquo; &mdash; лучший в России компьютерный учебный центр</h1>
-    </header>
+  <header>
+    <p>
+        <a href="http://www.specialist.ru">
+            <img src="imgs/logo.gif" alt="Центр обучения" width="103" height="50" title="Ссылка http://www.specialist.ru">
+        </a>
+    </p>
+    <h1>&laquo;Специалист&raquo; &mdash; лучший в России компьютерный учебный центр</h1>
+  </header>
 
-    <nav>
-        <blockquote>
-            Ссылки относительно документа, а не относительно корня сайта.<br>
-            <a href="content/news.html">Новости Центра (файл news.html)</a><br>
-            <a href="content/certificat.html">Новости сертифицированного обучения (файл certificat.html)</a><br>
-            <a href="content/events.html">События (файл events.html)</a><br>
-            <a href="content/test.html">Новости сервера Online тестирования и сертификации (файл test.html)</a><br>
-            <a href="content/distance.html">Новости дистанционного обучения (файл distance.html)</a><br>
-            <a href="#addres">Где находится офис? (нижняя часть документа)</a><br>
-        </blockquote>
-    </nav>
+  <nav>
+    <blockquote>
+        <!-- Ссылки относительно документа, а не относительно корня сайта.<br> -->
+    <ul>
+      <li>
+        <a href="content/news.html">Новости Центра<!-- (файл news.html) --></a>
+      </li>
+      <li>
+        <a href="content/certificat.html">Новости сертифицированного обучения <!-- (файл certificat.html) --></a>
+      </li>
+      <li>
+        <a href="content/events.html">События <!-- (файл events.html) --></a>
+      </li>
+        <li>
+          <a href="content/test.html">Новости сервера Online тестирования и сертификации <!-- (файл test.html) --></a>
+        </li>
+        <li>
+          <a href="content/distance.html">Новости дистанционного обучения <!-- (файл distance.html) --></a>
+        </li>
+        <li>
+          <a href="#addres">Где находится офис? <!-- (нижняя часть документа) --></a>
+        </li>
+    </ul>
+    </blockquote>
+  </nav>
     
     <section>
         <p>
