mozilla css/style, html-tables.html, index.html

--- a/mozilla/src/html-tables.html
+++ b/mozilla/src/html-tables.html
@@ -1,1 +1,21 @@
- 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/table.css">
+  <title>Mozilla Таблицы</title>
+</head>
+<body>
+  <h1>html таблицы</h1>
+  <h2 id="html-tables-basics"><a href="#html-tables-basics">html таблицы основы</a></h2>
+  <p>
+    Этот раздел познакомит вас с таблицами HTML, представив самые базовые понятия - строки и ячейки, заголовки, слияние строк и столбцов, а также объединение всех ячеек в столбце в целях стилизации.
+  </p>
+  <table>
+    <tr><th>Начальные условия</th><td>html основы</td></tr>
+    <tr><th>Цель</th><td>Общее знакомство с таблицами HTML</td></tr>
+  </table>
+</body>
+</html>
