--- a/mozilla/src/index.html
+++ b/mozilla/src/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css" type="text/css">
   <link rel="stylesheet" href="css/numbering.css" type="text/css">
-  <title>Начало работы с Вебом</title>
+  <title>Mozilla index</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Ubuntu&family=Ubuntu+Mono:ital@1&display=swap" rel="stylesheet">
@@ -56,7 +56,7 @@
     </li>
     <li><a href="html-tables.html">Таблицы html</a>
       <ol>
-        <li></li>
+        <li><a href="html-tables.html#html-tables-basics">html таблицы основы</a></li>
       </ol>
     </li>
   </ol>
