EN ссылки на учебник

--- a/en/index.html
+++ b/en/index.html
@@ -16,5 +16,7 @@
       </ul>
     </li>
   </ul>
+  <p><a href="https://html5book.ru/html-table/#grouping" title="html5book.ru">Группировка разделов таблицы(Продолжение)</a></p>
+  <p><a href="https://html5book.ru/css3-tables/" title="html5book.ru">css-таблицы(учебник)</a></p>
 </body>
 </html>
